--- a/app/my-app/shoppinglist/SearchBar.css
+++ b/app/my-app/shoppinglist/SearchBar.css
@@ -1,24 +1,69 @@
-.search{
+.searchInputs {
+  margin-top: 90px;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  font-family: Arial, Helvetica, sans-serif;
+  margin-left: 20px;
 }
 
 .search input {
-  margin-top: 20px;
-  width: 350px;
-  height: 40px;
-  font-size: 20px;
-  padding-left: 10px;
+  background-color: rgb(255, 255, 255);
+  border: 1;
+  border-radius: 2px;
+  border-top-right-radius: 0px;
+  border-bottom-right-radius: 0px;
+  font-size: 18px;
+  padding: 15px;
+  height: 20px;
+  width: 250px;
 }
 
-p {
-  margin: 3px;
-  font-size: 10px;
+.searchIcon {
+  height: 60px;
+  width: 50px;
+  background-color: white;
+  display: grid;
+  place-items: center;
 }
 
-html, body {
-  overscroll-behavior-y: auto;
+input:focus {
+  outline: none;
+}
+.searchIcon svg {
+  font-size: 35px;
+}
+
+.dataResult {
+  margin-top: 5px;
+  width: 300px;
+  height: 200px;
+  background-color: white;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  overflow: hidden;
+  overflow-y: auto;
+}
+
+.dataResult::-webkit-scrollbar {
+  display: none;
+}
+
+.dataResult .dataItem {
+  width: 100%;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  color: black;
+}
+
+.dataItem p {
+  margin-left: 10px;
+}
+a {
+  text-decoration: none;
+}
+
+a:hover {
+  background-color: lightgrey;
+}
+
+#clearBtn {
+  cursor: pointer;
 }
