--- a/app/my-app/shoppinglist/SearchBar.css
+++ b/app/my-app/shoppinglist/SearchBar.css
@@ -32,13 +32,13 @@ input:focus {
 }
 
 .dataResult {
-  margin-top: 5px;
-  width: 300px;
+  margin-top: 10px;
+  width: 100%;
   height: 200px;
   background-color: white;
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   overflow: hidden;
   overflow-y: auto;
+  box-shadow: 0 .125rem .25rem rgba(0,0,0,.075) !important;
 }
 
 .dataResult::-webkit-scrollbar {
@@ -66,4 +66,24 @@ a:hover {
 
 #clearBtn {
   cursor: pointer;
+}
+
+button {
+  display: flex;
+  justify-content: space-between;
+  background-color: white;
+  font-size: 16px;
+  padding: 15px 20px 15px 20px;
+  border: 0;
+  border-bottom: 1px solid #ccc;
+  width: 100%;
+  text-align: left;
+  border-left: 1px solid #ccc;
+  border-right: 1px solid #ccc;
+}
+
+button:hover, :focus {
+  cursor: pointer;
+  font-weight: bold;
+  background-color: #ccc;
 }
