--- a/app/my-app/shoppinglist/SearchBar.css
+++ b/app/my-app/shoppinglist/SearchBar.css
@@ -39,6 +39,7 @@ input:focus {
   overflow: hidden;
   overflow-y: auto;
   box-shadow: 0 .125rem .25rem rgba(0,0,0,.075) !important;
+  list-style: none;
 }
 
 .dataResult::-webkit-scrollbar {
