--- a/app/my-app/shoppinglist/SearchBar.css
+++ b/app/my-app/shoppinglist/SearchBar.css
@@ -2,32 +2,42 @@ ul {
   list-style-type: none;
  }
 
+.search{
+  margin-top: 25px;
+  /* height: 13px; */
+  width: 335px;
+  border-width: 1;
+}
+
 .searchInputs {
   /* margin-top: 90px; */
   display: flex;
-  margin-left: 20px;
   border-radius: 50px;
+  height: 40px;
+  width: 335px;
+  border-width: 1;
 }
 
 .search input {
-  background-color: rgb(255, 255, 255);
-  border: 1;
-  /* border-radius: 2px;
-  border-top-right-radius: 0px;
-  border-bottom-right-radius: 0px; */
+  background-color: #f6f6f6;
+  border-width: 1px;
+  border-color: #e8e8e8;
   font-size: 18px;
   padding: 15px;
-  height: 20px;
-  width: 250px;
+  height: 13px;
+  width: 335px;
   border-radius: 50px;
 }
 
 .searchIcon {
-  height: 60px;
+  height: 30px;
   width: 50px;
-  background-color: white;
+  background-color: #f6f6f6;
   display: grid;
   place-items: center;
+  position: absolute;
+  margin-left: 275px;
+  margin-top: 5px;
 }
 
 input:focus {
@@ -38,16 +48,23 @@ input:focus {
 }
 
 .dataResult {
-  margin-top: 10px;
+  /* margin-top: 10px; */
   width: 100%;
-  height: 200px;
-  background-color: white;
+  /* height: 200px; */
+  background-color:#e5e5e5;
   overflow: hidden;
   overflow-y: auto;
-  box-shadow: 0 .125rem .25rem rgba(0,0,0,.075) !important;
+  /* box-shadow: 0 .125rem .25rem rgba(0,0,0,.075) !important; */
   margin-left: 0px;
   padding-left: 0px;
   list-style: none;
+  border-left-width: 1px;
+  border-right-width: 1px;
+  border-bottom-width: 1px;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+
+  border-width: 1;
 }
 
 .dataResult::-webkit-scrollbar {
@@ -80,12 +97,12 @@ a:hover {
 button {
   display: flex;
   justify-content: space-between;
-  background-color: white;
+  background-color: #e5e5e5;
   font-size: 16px;
   padding: 15px 20px 15px 20px;
-  border: 0;
+  /* border: 0; */
   border-bottom: 1px solid #ccc;
-  border-top: 1px solid #ccc;
+  /* border-top: 1px solid #ccc; */
   width: 100%;
   text-align: left;
   border-left: 1px solid #ccc;
