--- a/app/my-app/shoppinglist/SearchBar.css
+++ b/app/my-app/shoppinglist/SearchBar.css
@@ -19,9 +19,9 @@ ul {
 }
 
 .search input {
-  background-color: #f6f6f6;
+  background-color: #e8e8e8;
   border-width: 1px;
-  border-color: #e8e8e8;
+  border-color: #e5e5e5;
   font-size: 18px;
   padding: 15px;
   height: 13px;
@@ -32,7 +32,7 @@ ul {
 .searchIcon {
   height: 30px;
   width: 50px;
-  background-color: #f6f6f6;
+  background-color: #e8e8e8;
   display: grid;
   place-items: center;
   position: absolute;
@@ -51,20 +51,20 @@ input:focus {
   /* margin-top: 10px; */
   width: 100%;
   /* height: 200px; */
-  background-color:#e5e5e5;
+  background-color:#e8e8e8;
   overflow: hidden;
   overflow-y: auto;
   /* box-shadow: 0 .125rem .25rem rgba(0,0,0,.075) !important; */
   margin-left: 0px;
   padding-left: 0px;
+  padding-top: 0px;
+  margin-top: 5px;
   list-style: none;
-  border-left-width: 1px;
-  border-right-width: 1px;
-  border-bottom-width: 1px;
-  border-bottom-left-radius: 10px;
-  border-bottom-right-radius: 10px;
-
-  border-width: 1;
+  /* border-left-width: 1px;
+  border-right-width: 1px; */
+  border-bottom-width: 0px;
+  border-top-width: 0px;
+  border-radius: 10px;
 }
 
 .dataResult::-webkit-scrollbar {
@@ -97,20 +97,29 @@ a:hover {
 button {
   display: flex;
   justify-content: space-between;
-  background-color: #e5e5e5;
+  background-color: #e8e8e8;
   font-size: 16px;
-  padding: 15px 20px 15px 20px;
+  padding: 15px 20px 15px 20px; 
   /* border: 0; */
-  border-bottom: 1px solid #ccc;
-  /* border-top: 1px solid #ccc; */
+  border-bottom: 0px solid black;
+  /* border-top: 1px solid #e8e8e8; */
   width: 100%;
   text-align: left;
-  border-left: 1px solid #ccc;
-  border-right: 1px solid #ccc;
+  border-left: 0px;
+  border-right: 0px; 
+  border-top-width: 0px;
 }
 
 button:hover, :focus {
   cursor: pointer;
   font-weight: bold;
   background-color: #ccc;
+}
+
+.rounded{
+  border-top: 1px solid #bbb;
+  opacity: 50%;
+  width: 80%;
+  align-self: center;
+  background-color: #e8e8e8;
 }
